syntax = "proto3";

package rivet.backend.pkg.tier.list;

import "proto/common.proto";
import "proto/backend/region.proto";

message Request {
	repeated rivet.common.Uuid region_ids = 1;
}

message Response {
	message Region {
		rivet.common.Uuid region_id = 1;
		repeated rivet.backend.region.Tier tiers = 2;
	}

	repeated Region regions = 1;
}

message CacheInstanceTypes {
	repeated CacheInstanceType instance_types = 1;
}

message CacheInstanceType {
	string id = 1;
	uint64 memory = 2;
	uint64 disk = 3;
	uint64 vcpus = 4;
	uint64 network_out = 5;
}
